[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/moon_light/moon_light.png" type="Texture" id=1]
[ext_resource path="res://src/moon_light/moon_light.gd" type="Script" id=2]

[node name="MoonLight" type="Light2D"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorTransitionTween" type="Tween" parent="."]

[node name="EnergyTransitionTween" type="Tween" parent="."]
